--- a/Fugit/wear/build.gradle
+++ b/Fugit/wear/build.gradle
@@ -31,4 +31,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.support:wearable:2.0.0-alpha1'
     compile 'com.google.android.gms:play-services-wearable:9.0.2'
+    compile 'com.luckycatlabs:SunriseSunsetCalculator:1.2'
+}
+repositories {
+    mavenCentral()
 }
