--- a/Fugit/wear/build.gradle
+++ b/Fugit/wear/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "pablogventura.fugit"
         minSdkVersion 23
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.1a"
     }
     buildTypes {
         release {
